syntax = "proto3";
package news;

message Empty {}

message News {
  string id = 1;
  string title = 2;
  string body = 3;
  string postImage = 4;
}

message NewsList {
  repeated News news = 1;
}

service NewsService {
  rpc getAllNews (Empty) returns (NewsList);
  rpc GetNewsById (News) returns (News);
  // rpc CreateNews (News) returns (News);
  // rpc UpdateNews (News) returns (News);
  // rpc DeleteNews (News) returns (News);
}